--- a/people.Rmd
+++ b/people.Rmd
@@ -27,6 +27,8 @@ Nojin Kwak (Ph.D., University of Wisconsin-Madison) is a professor in the Depart
 
 contact: [njkwak@buffalo.edu](njkwak@buffalo.edu)
 
+## Emma Bennett
+Emma Bennett is an undergraduate student in the Department of Communication at the University of Buffalo. 
 
 ## Xinxia Dong
 
@@ -41,6 +43,8 @@ Xinxia Dong (M.A., Renmin University of China) is pursuing her Ph.D. in the Depa
 
 Sara Holland Levin is a PhD student in Communication at the University of Connecticut. Her research focuses on political communication on social media, with a particular focus on politicization and polarization of attitudes. Sara is especially interested in how people process misinformation on social media through a political lens, and is passionate about examining these research questions from a computational perspective. At the University of Connecticut, Sara specializes in teaching digital production coursework. 
 
+## Junwan Seo
+Junwan Seo is a Ph.D. student in the Department of Communication at the University of Buffalo.
 
 ## Rui Wang
 
