--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,9 @@
 
-**The Communication and Emerging Media (CEM[kem]) Lab** is a collaborative research group that investigates the role of emerging media, such as Facebook, Twitter, YouTube, and TikTok, in the political communication landscape of the 21st century. Based in the [Department of Communication at the University at Buffalo](http://www.buffalo.edu/cas/communication.html) and the [Department of Communication at the University of Connecticut](https://comm.uconn.edu/), the CEM Lab is committed to facilitating faculty-student collaborative research.
+**The Communication and Emerging Media (CEM[kem]) Lab** is a collaborative research group that investigates the role of emerging media in the political communication landscape of the 21st century. Based in the [Department of Communication at the University at Buffalo](http://www.buffalo.edu/cas/communication.html) and the [Department of Communication at the University of Connecticut](https://comm.uconn.edu/), the CEM Lab is committed to facilitating faculty-student collaborative research.
 
 With emerging media intertwined with almost every aspect of social life, particularly our politics, we are interested in understanding how they shape people's lived experiences. Particularly, we study how people use digital media to consume news and political information, learn about politics, discuss and share political content with others, and engage in political processes. Here, we see politics as relevant to almost all facets of our public and private lives, from voting and participation in social movements, to what we purchase and what lifestyle we adopt.   
 
-Our methodological approach combines cutting-edge computational methods like NLP and network analysis with conventional quantitative methodologies such as surveys and experiments. We believe that this mixed-method approach can help us better understand the psychological mechanisms and behavioral patterns of people’s experiences with emerging media as well as the social and political implications of emerging media.
+Our methodological approach combines computational methods like NLP and network analysis with conventional quantitative methodologies such as surveys and experiments. We believe that this mixed-method approach can help us better understand the psychological mechanisms and behavioral patterns of people’s experiences with emerging media as well as the social and political implications of emerging media.
 
 The CEM Lab is dedicated to providing an open, diverse, inclusive, and collaborative space for students interested in political communication to develop their research skills. Through close faculty mentoring and weekly meetings, students are involved in all phases of the research process including idea generation, research design, data collection and analysis, and writing. We hope such hands-on research experience will prepare graduate students to later conduct independent research. 
 
