--- a/projects.Rmd
+++ b/projects.Rmd
@@ -5,17 +5,12 @@
 
 
 ## Ongoing
-### From #StayWoke to #WokeMindVirus
 
-<img src="files/the-culture-wars.png" style="width:100%; height: 10%">
+### AI and politics
 
-With its openness and connectivity, social media can successfully amplify voices from traditionally marginalized people (Freelon et al., 2018; Jackson & Foucault Welles, 2015) as well as bad actors and extremists (Garry et al., 2021). Research has begun to show the multi-platform nature of such processes. In analyzing Russian IRA disinformation campaign, Lukito (2019) reveals its temporal coordination between Twitter and Reddit, and Golovchenko and colleagues (2020) show the prevalence of Twitter posts embedding links to YouTube videos. Additionally, de Zeeuw and colleagues (2020) trace the mainstreaming of the QAnon conspiracy theory, traveling from 4chan to Reddit and YouTube. Building on the increase in multi-platform studies, we advance our theoretical argument on platform interrelation and ask how social media platforms separately and synergistically shaped the transformation of the meaning and usage of “wokeness” in public discourse.
+### Themes and Politicization surrounding Fentanyl Misuse on Video Platforms
 
-### Elon Musk and Twitter
-
-<img src="files/musk.png" style="width:100%; height: 10%">
-
-With social media platforms increasingly sinking into nearly all aspects of society (Van Dijck, 2021) and concerns over the spread of mis- and dis-information on various platforms (Grinberg et al., 2019), platform governance has come to public, media, and academic spotlight in recent years. Platform governance involves multiple players, including “platform companies, users, advertisers, governments, and other political actors” (Gorwa, 2019). In particular, some platforms are significantly tied to their owners, like Mark Zuckerberg of Facebook, Jack Dorsey of Twitter, and Donald Trump of Truth Social. Most recently, Elon Musk’s takeover of one of the most influential platforms, Twitter, has ignited debates about privatization of public sphere, content moderation (and restoration of controversial accounts), and their political consequences. This raises questions about the role that a single person can/should have in impacting public discourse on a platform. Building on platform governance (Van Dijck & Poell, 2013) and social media public opinion (Zhang et al., 2022) scholarship, we conceptualize social media discourses surrounding platform governance as an expression of public opinion and an object with business impact. By examining how platform ownership change might impact the intensity of, engagement with, and topics in platform governance discourses, we seek to contribute to our understanding of how the democratic and capitalist aspects of platforms are intertwined.  
+### Mapping out political chatter on TikTok
 
 ## Completed:
 
@@ -35,7 +30,14 @@ Through an analysis of 242 QAnon Twitter accounts using topic modeling and time 
 
 Extending research on the technological features and user practices of social media, this article theorizes social media as an ecosystem consisting of simultaneously differentiated yet interconnected platforms. We argue that how platforms are interconnected in this ecosystem is shaped by social media users’ cross-platform and cross-media sharing practices, which result in the dissemination of information across the social media ecosystem via hyperlinks. Using two distinct large-scale datasets on prominent issues in the U.S. and a rigorous manual coding of link domains, we investigate the linking patterns of 187 platforms. Our results reveal the prominent role of cross-media sharing within the social media ecosystem, with center-left and right-wing news being shared most frequently. Also, YouTube and Twitter emerge as two leading platforms facilitating interconnections among others. Providing robust empirical evidence, this study advances our theoretical understanding of social media platforms as forming an ecosystem connected through users’ sharing practices.
 
-### The politicization and polarization of the #MeToo movement
+### The politicization of the #MeToo movement
 
 With existing research showing the fragilities of social media activism and the stubbornness of partisan beliefs and attitudes, we examine whether partisans politicize social media activism. Politicization is conceptualized as partisans crowding out non-partisan participants, dominating conversations and debates, and weaving selective events into narratives. Our large-scale and multi-layered computational analysis of discourses surrounding the #MeToo movement is based on a comprehensive list of related accusations and a vast corpus of all #MeToo tweets. Through cluster analysis of the retweet network, we identified different groups and found that partisan users accounted for the overwhelming majority of the tweets. In the next step, we will apply supervised machine learning to classify different expressions and use time series modeling to examine the relationship between features of accusations and types of expressions.
 
+### From #StayWoke to #WokeMindVirus
+
+This project explores how the discourse surrounding a racially marginalized community becomes politicized via culture wars narratives across platforms. Drawing from the thesis of identity politics and political polarization, we discuss how racial justice discourse is hijacked by partisan leaders and their followers over time and explain how this process plays out through both differentiated and coordinated social media platform use. Situating our discussion in the ‘woke’ discourse as originated within the Black Twitter community, we collect data from 2012 through 2022 on Twitter and YouTube and apply user and content-level computational analyses to reveal that the term woke has been increasingly amplified in culture wars on both platforms over time. In particular, partisan users on Twitter dominated and politicized the discourse while lifestyle and entertainment channels on YouTube were most prevalent. The cross-platform analysis reveals that YouTube was a top domain within external links embedded in tweets, and Twitter was also a top destination within the external links embedded in YouTube video descriptions. Conservatives were especially keen on sharing right-wing content to interconnect platforms, suggesting the success of cross-platform coordination in helping them amplify culture war issues. Both theoretical and political implications are discussed.  
+
+### Elon Musk and Twitter
+
+Centering on social media’s public- and profit-oriented nature, this project theorizes how social media users are empowered and constrained when participating in platform governance. The empirical analysis focuses on user responses before and after Elon Musk’s official acquisition of Twitter, utilizing cluster analysis and topic modeling to examine the volume and content of related discourses among Twitter user groups. Our results point to user constraint in platform governance. Though a diverse set of users, such as partisans, bots, and cryptocurrency enthusiasts, participated with diverging objectives, partisans dominated the conversations. There was an upsurge in user volume and activity level post-acquisition among liberal users, whose critical voices on platform governance might have bolstered platform business. Potential bots also increased in volume and amplified political topics. Our findings shed light on the challenges of user-driven platform governance, underscoring the complex interplay between platform users, economy, and governance.
