--- a/people.Rmd
+++ b/people.Rmd
@@ -27,12 +27,17 @@ Nojin Kwak (Ph.D., University of Wisconsin-Madison) is a professor in the Depart
 
 contact: [njkwak@buffalo.edu](njkwak@buffalo.edu)
 
-## Emma Bennett
+## Afolabi Franca
 
-<img src="files/Emma.JPG" style="width:30%; border:5px solid">
+## James Kwarteng
 
-Emma Bennett is a 4th-year Communication and Psychology student at University at Buffalo. She is a communication teaching assistant and research lab participant. 
+## Tahleen Lattimer
 
+## Yi Yin Leong
+
+<img src="files/Yin.jpg" style="width:30%; border:5px solid">
+
+Yi Yin Leong is currently a Presidential Ph.D. Fellow in the Department of Communication at the University at Buffalo. Her research focuses on health and risk communication, specifically among women and LGBTQ+ populations. She hopes to contribute and advance the current scholarship, and offer insights into the lives of marginalized and disadvantaged communities.
 
 ## Sara Holland Levin
 
@@ -40,11 +45,23 @@ Emma Bennett is a 4th-year Communication and Psychology student at University at
 
 Sara Holland Levin is a PhD student in Communication at the University of Connecticut. Her research focuses on political communication on social media, with a particular focus on politicization and polarization of attitudes. Sara is especially interested in how people process misinformation on social media through a political lens, and is passionate about examining these research questions from a computational perspective. At the University of Connecticut, Sara specializes in teaching digital production coursework. 
 
+## Lili Romann
+
+<img src="files/LRR_Headshot.png" style="width:30%; border:5px solid">
+
+Lili R. Romann (M.A., University of Connecticut) is a doctoral student at the UConn. Her research lies at the nexus of interpersonal health and computer-mediated communication. She studies health information-seeking processes, especially related to mental health communication, processes of health inquiry, sensitive self-disclosure, and self-diagnosis on social media. She is additionally passionate about promoting the importance safe and effective social media experiences, specifically in fostering democratic collaborations between user and platform in our algorithm-driven online world. She has served as a graduate assistant for the Department of Communication; Women’s, Gender, & Sexuality Studies Program; and the Department of Journalism.
+
 ## Junwan Seo
 
 <img src="files/Jun_Profile.jpg" style="width:30%; border:5px solid">
 
 Junwan Seo is a Ph.D. student in the Department of Communication at the University at Buffalo. His research focuses on media uses and effects, narrative effects, and computational social science. He is especially interested in the effects of emotional experiences and different narrative components such as storyline, characters, and visual features.
+
+## Chaeyeon “Celine” Yim
+
+<img src="files/Chaeyeon (Celine) Yim.JPG" style="width:30%; border:5px solid">
+
+Celine Yim is a Ph.D. student in the Department of Communication at the University of Connecticut, where she studies health communication and emerging technologies. She is also a communication assistant for the Technical Assistance to Brownfields Program in New England. Her research interest lies in health issues of stigmatized diseases and vaccines and environmental health issues like PFAS and brownfields through experimental designs and computational methods. She also explores human-AI interaction in various domains, such as healthcare, business, and education.
 
 ## Rui Wang
 
@@ -53,23 +70,28 @@ Junwan Seo is a Ph.D. student in the Department of Communication at the Universi
 Rui Wang is a current Ph.D. student in the Department of Communication at the University of Buffalo, earned her M.A. in Information and Communication Studies at Rutgers University. Her research focuses on media effects and persuasion, combining computational methods with experimental and survey designs. She is particularly interested in how new technology applied to journalism reshapes public perception. She is also interested in the effect of social media discussion on public attitudes and attention on health and politics. She had three-year teaching experience in the School of Journalism and Communication at Anhui Normal University.
 
 
-## Dongdong Yang
-
-<img src="files/Dongdong-Yang-2018.jpeg" style="width:30%; border:5px solid">
-
-Dongdong Yang is an ABD in the Department of Communication at the University of Connecticut. She is interested in the use and effects of new communication technologies in a cross-cultural context. Specifically, her recent work investigates cross-cultural differences between Chinese and U.S. college students in social media picture editing, cute sticker use for impression management, and emoji use in online political discussion. She also examines how identity (e.g., gender, fanship, etc.) influences perceptions and attitudes in sports communication. 
-
-
 ### **ALUMNI NETWORK:**
 
 ## Zhiying Yue 
 
 <img src="files/Zhiying_Yue.jpg" style="width:30%; border:5px solid">
 
-Zhiying Yue (Ph.D., University at Buffalo) was a research assistant in the CEM lab. She researches social media use and its impact on psychological and physical well-being. She currently holds a post-doc position at the Harvard Medical School.
+Zhiying Yue (Ph.D., University at Buffalo) was a research assistant in the CEM lab. She currently is a Scientist at the Digital Wellness Lab at Boston Children's Hospital and an Instructor in Pediatrics at Harvard Medical School. Her work focuses on adolescents' interactive media use and well-being.
 
 ## Xinxia Dong
 
 <img src="files/IMG_6408.JPG" style="width:30%; border:5px solid">
 
-Xinxia Dong (M.A., Renmin University of China) is pursuing her Ph.D. in the Department of Communication at the University at Buffalo. Xinxia's academic interests lie in risk communication and social media. Her current published work primarily examines the risk information seeking and processing (RISP) model. She is also passionate about exploring emerging media and learning various computational methods.
+Xinxia Dong (Ph.D., University at Buffalo) is currently a Lecturer in the School of Journalism and Communication at Shanghai University. Her research focuses on risk communication. 
+
+## Emma Bennett
+
+<img src="files/Emma.JPG" style="width:30%; border:5px solid">
+
+Emma Bennett is an MA student in the Parsons School of Design. 
+
+## Dongdong Yang
+
+<img src="files/Dongdong-Yang-2018.jpeg" style="width:30%; border:5px solid">
+
+Dongdong Yang (Ph.D., University of Connecticut) is assistant professor in the School of Communication and Media at Montclair State University.She is primarily interested in digital media adoption and effects in cross-cultural communication, feminist media studies, and online political discussion. 
