--- a/people.Rmd
+++ b/people.Rmd
@@ -1,97 +1,205 @@
-<link rel="stylesheet" href="styles.css" type="text/css">
+## YINI ZHANG (CO-DIRECTOR)
 
-<!-- --- -->
-<!-- title: "People" -->
-<!-- --- -->
-
-## Yini Zhang (co-director)
-
-<img src="files/headshot2024.jpg" style="width:30%; border:5px solid">
+<div class="person-row">
+<div class="person-photo">
+<img src="files/headshot2024.jpg" class="profile-photo">
+</div>
+<div class="person-text" markdown="1">
 
 Yini Zhang (Ph.D., University of Wisconsin-Madison) is an assistant professor in the Department of Communication at the University at Buffalo. She applies computational methods to the study of social media and emerging communication technologies. Specifically, she examines the processes and outcomes of primarily political communication within and beyond different corners of the new media landscape. Her work has been published in leading communication journals such as *Journal of Communication*, *Journal of Computer-Mediated Communication*, and *New Media & Society*. Her research has been supported by funders like the National Science Foundation and the Knight Foundation and received media coverage from major news outlets like the New York Times, BBC, and USA TODAY.
 
 contact: [yzhang20@buffalo.edu](yzhang20@buffalo.edu)
 
-## Jiyoun Suk (co-director)
+</div>
+</div>
 
-<img src="files/Jiyoun.jpeg" style="width:30%; border:5px solid">
+## JIYOUN SUK (CO-DIRECTOR)
+
+<div class="person-row">
+<div class="person-photo">
+<img src="files/Jiyoun.jpeg" class="profile-photo">
+</div>
+<div class="person-text" markdown="1">
 
 Jiyoun Suk (Ph.D., University of Wisconsin-Madison) is an Assistant Professor in the Department of Communication at the University of Connecticut. In her research, she looks at how the communication processes in the contemporary media environment shape social trust, activism, and political polarization, primarily employing computational methods. In particular, she is interested in how people understand different social groups marginalized communities. Her primary line of research examines the role of networked communications in bringing out voices of social justice and equality, as in the case of the #MeToo movement. She currently looks at how digital activism is contextualized across specific geographies and social media platforms.
 
 contact: [jiyoun.suk@uconn.edu](jiyoun.suk@uconn.edu)
 
-## Nojin Kwak (co-director)
-<img src="files/Kwak.jpeg" style="width:30%; border:5px solid">
+</div>
+</div>
+
+## NOJIN KWAK (CO-DIRECTOR)
+
+<div class="person-row">
+<div class="person-photo">
+<img src="files/Kwak.jpeg" class="profile-photo">
+</div>
+<div class="person-text" markdown="1">
 
 Nojin Kwak (Ph.D., University of Wisconsin-Madison) is a professor in the Department of Communication at the University at Buffalo (UB), State University of New York. In addition, he currently serves as Vice Provost for International Education at UB. Kwak’s research centers on the role of communication media in civic and political engagement, and his recent studies analyze the impact of social media on community involvement, deliberative openness, and political participation. Kwak’s work has been published in top journals in the field, including *Communication Research*, *Journal of Communication*, *Human Communication Research*, *New Media and Society*, *Journal of Computer-Mediated Communication*, *Political Communication*, and *Political Research Quarterly*, and he has received numerous top paper awards at major conferences. Previously, Kwak was a professor and chair of the Department of Communication and Media at the University of Michigan.
 
 contact: [njkwak@buffalo.edu](njkwak@buffalo.edu)
 
-## Afolabi Franca
+</div>
+</div>
 
-## James Kwarteng
+## AFOLABI FRANCA
 
-## Tahleen Lattimer
+## YIJIN GUO
 
-## Yi Yin Leong
+<div class="person-row">
+<div class="person-photo">
+<img src="files/Yijin's headshot.jpg" class="profile-photo">
+</div>
+<div class="person-text" markdown="1">
 
-<img src="files/Yin.jpg" style="width:30%; border:5px solid">
+Yijin Guo is a Ph.D. student in the Department of Communication at the University at Buffalo. His research interests mainly focus on media effects, misinformation, and digital risks. His current work investigates misinformation interventions across different channels through surveys and experiments, and uses computational methods to examine social media discussions related to digital risks such as online scams.
+
+</div>
+</div>
+
+## JAMES KWARTENG
+
+## TAHLEEN LATTIMER
+
+## YI YIN LEONG
+
+<div class="person-row">
+<div class="person-photo">
+<img src="files/Yin.jpg" class="profile-photo">
+</div>
+<div class="person-text" markdown="1">
 
 Yi Yin Leong is currently a Presidential Ph.D. Fellow in the Department of Communication at the University at Buffalo. Her research focuses on health and risk communication, specifically among women and LGBTQ+ populations. She hopes to contribute and advance the current scholarship, and offer insights into the lives of marginalized and disadvantaged communities.
 
-## Sara Holland Levin
+</div>
+</div>
 
-<img src="files/Sara-Holland.jpg" style="width:30%; border:5px solid">
+## LILI ROMANN
 
-Sara Holland Levin is a PhD student in Communication at the University of Connecticut. Her research focuses on political communication on social media, with a particular focus on politicization and polarization of attitudes. Sara is especially interested in how people process misinformation on social media through a political lens, and is passionate about examining these research questions from a computational perspective. At the University of Connecticut, Sara specializes in teaching digital production coursework. 
-
-## Lili Romann
-
-<img src="files/LRR_Headshot.png" style="width:30%; border:5px solid">
+<div class="person-row">
+<div class="person-photo">
+<img src="files/LRR_Headshot.png" class="profile-photo">
+</div>
+<div class="person-text" markdown="1">
 
 Lili R. Romann (M.A., University of Connecticut) is a doctoral student at the UConn. Her research lies at the nexus of interpersonal health and computer-mediated communication. She studies health information-seeking processes, especially related to mental health communication, processes of health inquiry, sensitive self-disclosure, and self-diagnosis on social media. She is additionally passionate about promoting the importance safe and effective social media experiences, specifically in fostering democratic collaborations between user and platform in our algorithm-driven online world. She has served as a graduate assistant for the Department of Communication; Women’s, Gender, & Sexuality Studies Program; and the Department of Journalism.
 
-## Junwan Seo
+</div>
+</div>
 
-<img src="files/Jun_Profile.jpg" style="width:30%; border:5px solid">
+## JUNWAN SEO
+
+<div class="person-row">
+<div class="person-photo">
+<img src="files/Jun_Profile.jpg" class="profile-photo">
+</div>
+<div class="person-text" markdown="1">
 
 Junwan Seo is a Ph.D. student in the Department of Communication at the University at Buffalo. His research focuses on media uses and effects, narrative effects, and computational social science. He is especially interested in the effects of emotional experiences and different narrative components such as storyline, characters, and visual features.
 
-## Chaeyeon “Celine” Yim
+</div>
+</div>
 
-<img src="files/Chaeyeon (Celine) Yim.JPG" style="width:30%; border:5px solid">
+## CHAEYEON “CELINE” YIM
+
+<div class="person-row">
+<div class="person-photo">
+<img src="files/Chaeyeon (Celine) Yim.JPG" class="profile-photo">
+</div>
+<div class="person-text" markdown="1">
 
 Celine Yim is a Ph.D. student in the Department of Communication at the University of Connecticut, where she studies health communication and emerging technologies. She is also a communication assistant for the Technical Assistance to Brownfields Program in New England. Her research interest lies in health issues of stigmatized diseases and vaccines and environmental health issues like PFAS and brownfields through experimental designs and computational methods. She also explores human-AI interaction in various domains, such as healthcare, business, and education.
 
-## Rui Wang
+</div>
+</div>
 
-<img src="files/Rui_Profile.JPG" style="width:30%; border:5px solid">
+<div class="section-toggle">
 
-Rui Wang is a current Ph.D. student in the Department of Communication at the University of Buffalo, earned her M.A. in Information and Communication Studies at Rutgers University. Her research focuses on media effects and persuasion, combining computational methods with experimental and survey designs. She is particularly interested in how new technology applied to journalism reshapes public perception. She is also interested in the effect of social media discussion on public attitudes and attention on health and politics. She had three-year teaching experience in the School of Journalism and Communication at Anhui Normal University.
+<div class="section-toggle-header" data-toggle="collapse" data-target="#alumni-section" aria-expanded="true">
+  <h2 id="alumni-network">ALUMNI NETWORK</h2>
+  <span class="toggle-icon" aria-hidden="true">&#x25BC;</span>
+</div>
 
+<div id="alumni-section" class="section-toggle-body collapse in" markdown="1">
 
-### **ALUMNI NETWORK:**
+## ZHIYING YUE 
 
-## Zhiying Yue 
-
-<img src="files/Zhiying_Yue.jpg" style="width:30%; border:5px solid">
+<div class="person-row">
+<div class="person-photo">
+<img src="files/Zhiying_Yue.jpg" class="profile-photo">
+</div>
+<div class="person-text" markdown="1">
 
 Zhiying Yue (Ph.D., University at Buffalo) was a research assistant in the CEM lab. She currently is a Scientist at the Digital Wellness Lab at Boston Children's Hospital and an Instructor in Pediatrics at Harvard Medical School. Her work focuses on adolescents' interactive media use and well-being.
 
-## Xinxia Dong
+</div>
+</div>
 
-<img src="files/IMG_6408.JPG" style="width:30%; border:5px solid">
+## XINXIA DONG
+
+<div class="person-row">
+<div class="person-photo">
+<img src="files/IMG_6408.JPG" class="profile-photo">
+</div>
+<div class="person-text" markdown="1">
 
 Xinxia Dong (Ph.D., University at Buffalo) is currently a Lecturer in the School of Journalism and Communication at Shanghai University. Her research focuses on risk communication. 
 
-## Emma Bennett
+</div>
+</div>
 
-<img src="files/Emma.JPG" style="width:30%; border:5px solid">
+## EMMA BENNETT
+
+<div class="person-row">
+<div class="person-photo">
+<img src="files/Emma.JPG" class="profile-photo">
+</div>
+<div class="person-text" markdown="1">
 
 Emma Bennett is an MA student in the Parsons School of Design. 
 
-## Dongdong Yang
+</div>
+</div>
 
-<img src="files/Dongdong-Yang-2018.jpeg" style="width:30%; border:5px solid">
+## DONGDONG YANG
 
-Dongdong Yang (Ph.D., University of Connecticut) is assistant professor in the School of Communication and Media at Montclair State University.She is primarily interested in digital media adoption and effects in cross-cultural communication, feminist media studies, and online political discussion. 
+<div class="person-row">
+<div class="person-photo">
+<img src="files/Dongdong-Yang-2018.jpeg" class="profile-photo">
+</div>
+<div class="person-text" markdown="1">
+
+Dongdong Yang (Ph.D., University of Connecticut) is an assistant professor in the School of Communication and Media at Montclair State University. She is primarily interested in digital media adoption and effects in cross-cultural communication, feminist media studies, and online political discussion. 
+
+</div>
+</div>
+
+## SARA HOLLAND LEVIN
+
+<div class="person-row">
+<div class="person-photo">
+<img src="files/Sara-Holland.jpg" class="profile-photo">
+</div>
+<div class="person-text" markdown="1">
+
+Sara Holland Levin (Ph.D., University of Connecticut) is an assistant professor of Media and Culture in the Department of Communication and Media at West Chester University of Pennsylvania. Her research focuses on political communication on social media, with a particular focus on politicization and polarization of attitudes. Sara is especially interested in how people process misinformation on social media through a political lens, and is passionate about examining these research questions from a computational perspective. At the University of Connecticut, Sara specializes in teaching digital production coursework. 
+
+</div>
+</div>
+
+## RUI WANG
+
+<div class="person-row">
+<div class="person-photo">
+<img src="files/Rui_Profile.JPG" class="profile-photo">
+</div>
+<div class="person-text" markdown="1">
+
+Rui Wang (Ph.D., University at Buffalo) is an assistant professor in the Department of Communication and Media at Loyola University Maryland. Her research focuses on media effects and persuasion, combining computational methods with experimental and survey designs. She is particularly interested in how new technology applied to journalism reshapes public perception. She is also interested in the effect of social media discussion on public attitudes and attention on health and politics. 
+
+</div>
+</div>
+
+</div>
+</div>
